--- a/public_html/themes/doktork_theme/sass/_type.scss
+++ b/public_html/themes/doktork_theme/sass/_type.scss
@@ -19,22 +19,24 @@ Purpose of the stylesheet follows.
 html { font-size:100.01%; }
 body {
   font-size: 96%;
-  color: #222;
+  color: #21303D;
   background: #fff;
   font-family: 'Lato', sans-serif;
+  font-weight: 300;
+  line-height: 1.32em;
 }
 
 
 /* Headings
 -------------------------------------------------------------- */
 
-h1,h2,h3,h4,h5,h6 { font-weight: normal; color: #111; }
+h1,h2,h3,h4,h5,h6 { font-weight: 400; color: #2C4051; }
 
-h1 { font-size: 3em; line-height: 1; margin-bottom: 0.5em; }
-h2 { font-size: 2em; margin-bottom: 0.75em; }
-h3 { font-size: 1.5em; line-height: 1; margin-bottom: 1em; }
-h4 { font-size: 1.2em; line-height: 1.25; margin-bottom: 1.25em; }
-h5 { font-size: 1em; font-weight: bold; margin-bottom: 1.5em; }
+h1 { font-size: 2em; line-height: 1; margin-bottom: 0.5em; }
+h2 { font-size: 1.6em; margin-bottom: 0.55em; }
+h3 { font-size: 1.32em; line-height: 1; margin-bottom: 0.45em; }
+h4 { font-size: 1.1em; line-height: 1.25; margin-bottom: 0.45em; }
+h5 { font-size: 1em; font-weight: bold; margin-bottom: 0.45em; }
 h6 { font-size: 1em; font-weight: bold; }
 
 h1 img, h2 img, h3 img,
